--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "node-sass-chokidar": "^1.2.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.3.2",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "react-test-renderer": "^16.3.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
